# chimera

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
doc/: cheatsheet.md  serve.md
doc/dev/: cli-api-coverage.md  combine_archives.md  maintenance.md  server-router-mode.md  server.md  sqlite.md  webui.md
scripts/: combine_archives.py  manage.py  release_notes.py  test.sh  test_db_migrate.py  test_golden.py
scripts/case/: z_turbo.sh
src/chimera/: CMakeLists.txt  chimera.cpp  chimera.h  chimera_chat_store.cpp  chimera_chat_store.h  chimera_db.cpp  chimera_db.h  chimera_embed.cpp  chimera_embed.h  chimera_embed_cache.cpp  chimera_embed_cache.h  chimera_pin_check.cpp  chimera_sd.cpp  chimera_sd.h  chimera_serve.cpp  chimera_serve_audio.cpp  chimera_serve_chat_persist.cpp  chimera_serve_chats_read.cpp  chimera_serve_images.cpp  chimera_serve_internal.h  chimera_serve_rag.cpp  chimera_vector_store.cpp  chimera_vector_store.h  chimera_whisper.cpp  chimera_whisper.h  llama_build_info_shim.cpp  stb_impl.cpp
src/chimera_cli/: CMakeLists.txt  chimera.cpp
tests/golden/: apply_template.json  chat_completions.json  completions.json  detokenize.json  embeddings.json  models.json  props_shape.json  tokenize.json
